<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutScreen">


    <TableLayout
        android:layout_width="410dp"
        android:layout_height="600dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/app_name"
                android:layout_margin="10dp"
                android:text="Application Name:"
                />
            <TextView
                android:id="@+id/app_name_disp"
                android:text="@string/app_name"
                android:layout_margin="10dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/author"
                android:layout_margin="10dp"
                android:text="Creator:"
                />
            <TextView
                android:id="@+id/author_name"
                android:layout_margin="10dp"
                android:text="@string/author"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/version"
                android:layout_margin="10dp"
                android:text="@string/version"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/published"
                android:layout_margin="10dp"
                android:text="@string/date"
                />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>