<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/strikeDisplay"

        android:layout_width="81dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="none"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/addStrike"
        app:layout_constraintStart_toEndOf="@+id/ballDisplay" />

    <TextView
        android:id="@+id/ballDisplay"

        android:layout_width="81dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="none"
        android:isScrollContainer="false"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/addBall"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addBall"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#2196F3"
        android:onClick="addBall"
        android:text="@string/addBall"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/resetCounters"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addStrike"
        style="@android:style/Widget.Button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#2196F3"
        android:onClick="addStrike"
        android:text="@string/addStrike"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/resetCounters"
        app:layout_constraintStart_toEndOf="@+id/addBall" />

    <Button
        android:id="@+id/resetCounters"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#4FC3F7"
        android:onClick="resetCounters"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitApp"
        style="@android:style/Widget.Button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#81D4FA"
        android:fontFamily="monospace"
        android:onClick="exitApp"
        android:text="@string/x"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>